--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -398,30 +398,30 @@
     <div class="container">
         <!-- The rest of your HTML content goes here -->
         <div class="header">
-            <div class="profile-pic" style="background-image: url('images/profile-pic.jpg');"></div>
+            <div class="profile-pic" style="background-image: url('images/p2.png');"></div>
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>John Richard Alix</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <h1>John Carlo V. Dizon</h1>
+        <p class="description">I am an IT student, and build projects to kill some boredness♥</p>
         <h3>About Me:</h3>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
             <h3>DEVCON Affiliations:</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
-                <li>Former Campus DEVCON Ambassador - 2024</li>
+                <li>DEVCON Seminar Participant - 2025</li>
+                <li>DEVCON Holy Cross College Representative - 2025</li>
+                <li>Former Holy Cross College 2nd Yr Student - 2023/2024</li>
+                <li>Former Holy Cross College 1st Yr Student - 2022/2023</li>
             </ul>
 
-            <h3>Google Developers Affiliations:</h3>
+            <h3>Logic Legends Developers Affiliations:</h3>
             <ul>
-                <li>Technical Core Team Member - 2025</li>
-                <li>Former Documentations Core Team Member - 2024</li>
-                <li>GDSC USTP IT Ambassador - 2022</li>
-                <li>GDSC USTP Mobile Development Lead - '2023-2024'</li>
+                <li>Technical Core Team Member - 2023/2024</li>
+                <li>Former Documentations Core Team Member - 2023/2024</li>
+                <li>FullStack Developer - 2023/2024</li>
+                <li>Mobile App Semi Developer - 2024-2025</li>
             </ul>
         </div>
 
